add endpoint for public key and return signed tree head with loginfo (#97)
* add endpoint for public key and return signed tree head with loginfo
